Added persistent, continuous toaster to using the app without signing up.

--- a/frontend/app/src/static/app/base/toaster.html
+++ b/frontend/app/src/static/app/base/toaster.html
@@ -17,7 +17,7 @@
 
   <!-- SIGN UP -->
   <div ng-switch-when="signUp" class="group-mixed--middle textgroup-toaster">
-    <span>to back up your data,</span>
+    <span>you are in demo mode,</span>
     <a href class="highlighted link-inline"
       swiper-click="closeNotificationAndCall(notification, undefined, notification.gotoFn)">
       <span>sign up now</span>
