--- a/frontend/app/src/static/app/user/userHome.html
+++ b/frontend/app/src/static/app/user/userHome.html
@@ -135,7 +135,7 @@
   </section>
   <section ng-if="isFakeUser()" class="container-content">
     <div class="group-instruction">
-      <h2 class="group-heading instruction row">you are in <span class="highlighted">demo mode</span></h2>
+      <h2 class="group-heading instruction row long">you are in <span class="highlighted">demo mode</span></h2>
       <div class="textgroup-ingress row">your information is stored only locally</div>
       <div class="textgroup-ingress last row">protect your data and unlock online features by signing up
         for a new <span class="text-highlighted">extended mind</span> account
