Workaround links not blinking during onboarding because of Chrome bug 506898. https://code.google.com/p/chromium/issues/detail?id=506898

--- a/frontend/app/src/static/app/base/listFooter.html
+++ b/frontend/app/src/static/app/base/listFooter.html
@@ -9,9 +9,9 @@
   </a>
 
   <div class="group-symmetrical--middle">
-    <a href swiper-click="addItem()">
+    <div class="clickable" swiper-click="addItem()">
       <span class="icon-plus"></span>
-    </a>
+    </div>
   </div>
 
   <a href ng-if="rightNavigationText" ng-hide="isFooterNavigationHidden()"
