--- a/frontend/app/src/static/app/main/toolbar.html
+++ b/frontend/app/src/static/app/main/toolbar.html
@@ -5,10 +5,10 @@
       <span class="icon-menu"></span>
     </button>
     <div class="group-symmetrical--middle" ng-style="{maxWidth: calculateHeadingWidth()}">
-      <a href class="link" ng-click="clickToolbarHeading()"
+      <div class="link clickable" ng-click="clickToolbarHeading()"
       ng-class="{'link-disable': isTutorialInProgress(), 'onboarding': isListOnboarding()}">
         <div><span class="text-heading-primary" clamp=2 ng-bind="getCurrentHeading()"></span></div>
-      </a>
+      </div>
     </div>
     <button ng-show="isMoreThanOneFeatureActive()" class="group-symmetrical--right btn animate-fade-in"
       ng-click="openEditor('omnibar')">
@@ -22,9 +22,9 @@
       <span class="text-navigation" ng-bind="customToolbar.leftActionName"></span>
     </a>
     <div class="group-symmetrical--middle width-large">
-      <a href ng-click="customToolbar.middleActionFn()">
+      <div class="clickable" ng-click="customToolbar.middleActionFn()">
         <span class="text-heading-primary" ng-bind="customToolbar.getMiddleActionName()"></span>
-      </a>
+      </div>
     </div>
     <a href class="group-symmetrical--right link-navigation highlighted" ng-click="customToolbar.rightActionFn()">
       <span class="text-navigation" ng-bind="customToolbar.rightActionName"></span>
