Fixed note editor onboarding on and inline blinking text

--- a/frontend/app/src/static/app/focus/focusTasks.html
+++ b/frontend/app/src/static/app/focus/focusTasks.html
@@ -611,8 +611,8 @@
       <h2 class="group-heading instruction row">
         <span>tutorial <span class="highlighted">complete</span>!</span>
       </h2>
-      <div class="textgroup-ingress row">click on <div class="clickable" ng-click="blinkingTextClicked = true"
-        ng-class="!blinkingTextClicked && 'onboarding'">
+      <div class="textgroup-ingress row">click on <div class="clickable link-inline"
+        ng-click="blinkingTextClicked = true" ng-class="!blinkingTextClicked && 'onboarding'">
         <span class="text-heading">blinking text</span></div> anywhere
         in the app to find new places and unlock features
       </div>
