Better copy for tasks onboarding

--- a/frontend/app/src/static/app/tasks/tasksAll.html
+++ b/frontend/app/src/static/app/tasks/tasksAll.html
@@ -25,8 +25,7 @@
       <h2 class="group-heading instruction row">find all your
         <span class="highlighted">tasks</span> here
       </h2>
-      <div class="textgroup-ingress row">tasks are sorted in modified order so that the task you most recently
-      modified is at the top of the list</div>
+      <div class="textgroup-ingress row">the task you most recently modified is at the top of the list</div>
     </div>
   </section>
 
