Better copy for notes onboarding

--- a/frontend/app/src/static/app/notes/notesAll.html
+++ b/frontend/app/src/static/app/notes/notesAll.html
@@ -23,7 +23,7 @@
       <h2 class="group-heading instruction row">
         <span class="highlighted">note</span> created!
       </h2>
-      <div class="textgroup-ingress row">click on the title to view and edit your note</div>
+      <div class="textgroup-ingress row">star notes to move them next to your daily tasks in the focus section</div>
     </div>
   </section>
   <footer ng-if="isContentVisible('notes') || getOnboardingPhase('notes') === 1"
