--- a/frontend/app/src/static/app/main/inbox.html
+++ b/frontend/app/src/static/app/main/inbox.html
@@ -36,7 +36,7 @@
       list-prompt-hide="[listItemAddActive]"></div>
     <div ng-if="!isFakeUser()" class="row-form enable-text-selection">
       <span class="text-details downplayed">email</span>
-      <a class="highlighted" ng-click="clickInboxEmail()"
+      <a class="highlighted clickable" ng-click="clickInboxEmail()"
          external-link="getInboxEmailHref()">
         <span class="text-metadata" ng-bind="getInboxEmailAddress()"></span>
       </a>
