First version of getting instruction texts for clicking blue words from a public note in the extended mind collective

--- a/frontend/app/src/index_devel.html
+++ b/frontend/app/src/index_devel.html
@@ -39,6 +39,7 @@
   <script src="static/lib/clamp.js"></script>
   <script src="static/lib/lawnchair/lawnchair.js"></script>
   <script src="static/lib/lawnchair/lawnchair-dom.js"></script>
+  <script src="static/lib/markdown-it/markdown-it.js"></script>
 
   <script src="static/common/elastic.js"></script>
   <script src="static/common/fastclick.js"></script>
@@ -77,6 +78,7 @@
   <script src="static/app/base/AuthenticationService.js"></script>
   <script src="static/app/base/BackendClientService.js"></script>
   <script src="static/app/base/clampDirective.js"></script>
+  <script src="static/app/base/ContentService.js"></script>
   <script src="static/app/base/DrawerService.js"></script>
   <script src="static/app/base/ExtendedItemService.js"></script>
   <script src="static/app/base/ItemLikeService.js"></script>
@@ -169,6 +171,7 @@
   <script src="test/mock/MockTasksBackendService.js"></script>
   <script src="test/mock/MockConvertBackendService.js"></script>
   <script src="test/mock/MockPlatformService.js"></script>
+  <script src="test/mock/MockPublicBackendService.js"></script>
 
   <script src="static/js/animo.min.js"></script>
   <script src="static/js/em-animation.js"></script>
