--- a/frontend/app/src/static/app/base/modal.html
+++ b/frontend/app/src/static/app/base/modal.html
@@ -26,9 +26,10 @@
             <span class="text-heading" ng-bind="messageHeading"></span>
           </h2>
 
-          <!-- CONTENT -->
+          <!-- INGRESS -->
           <div ng-if="messageIngress" class="textgroup-ingress first last row" ng-bind="messageIngress"></div>
 
+          <!-- CONTENT -->
           <div ng-if="messageText" class="textgroup-message row">
             <span ng-repeat="textNode in messageText" ng-switch="textNode.type" class="text-medium">
               <span ng-switch-when="text" ng-bind="textNode.data"></span>
@@ -38,6 +39,9 @@
               <span ng-switch-when="separator"><br><br></span>
             </span>
           </div>
+
+          <!-- HTML CONTENT -->
+          <div ng-if="messageHtml" class="group-html-content row" ng-bind-html="messageHtml"></div>
 
           <!-- LIST PICKER AS MODAL CONTENT -->
           <div ng-if="listPicker && !selectedList">
