Refactored external URL handling to PlatformService. Markdown formatting now correctly handles external links.

--- a/frontend/app/src/static/app/base/modal.html
+++ b/frontend/app/src/static/app/base/modal.html
@@ -41,7 +41,7 @@
           </div>
 
           <!-- HTML CONTENT -->
-          <div ng-if="messageHtml" class="group-html-content row" ng-bind-html="messageHtml"></div>
+          <div ng-if="messageHtml" class="group-html-content row" bind-preprocessed-html="messageHtml" ></div>
 
           <!-- LIST PICKER AS MODAL CONTENT -->
           <div ng-if="listPicker && !selectedList">
