--- a/frontend/app/src/index_devel.html
+++ b/frontend/app/src/index_devel.html
@@ -77,6 +77,7 @@
   <script src="static/app/base/ArrayService.js"></script>
   <script src="static/app/base/AuthenticationService.js"></script>
   <script src="static/app/base/BackendClientService.js"></script>
+  <script src="static/app/base/bindPreprocessedHtml.js"></script>
   <script src="static/app/base/clampDirective.js"></script>
   <script src="static/app/base/ContentService.js"></script>
   <script src="static/app/base/DrawerService.js"></script>
