--- a/frontend/app/src/static/app/base/tagEditor.html
+++ b/frontend/app/src/static/app/base/tagEditor.html
@@ -131,7 +131,7 @@
       <div ng-if="showTagProperty('parent')" class="group-mixed">
         <a href class="group-mixed--middle link-search-result" ng-class="!tag.trans.parent && 'downplayed'"
           swiper-click="openParentPicker()">
-          <span class="text-field--title" clamp=1 ng-bind="getParentText()"></span>
+          <span class="text-field--title" clamp=1 ng-bind="getTagParentText(tag)"></span>
         </a>
         <div ng-if="tag.trans.parent" class="group-mixed--right">
           <span class="text-field--label">parent</span>
